# MAS306_Drone_G12

./: .gitignore  BachelorVideo.mlt  README.md  imgui.ini
CAD/: MAS306materials-2024_GR12.sldmat  P-Filament 721.docx  QualisysMarkerCube.SLDPRT  README.md  drawingTemplate.SLDDRW  frontPageArenaDrone.pdn
CAD/Arena/: cardholder.SLDPRT  cardholder2.SLDPRT  cardholder2.STL  encoderHolder.SLDPRT  endstopSwitch.SLDPRT  top-stick_qualisys.SLDPRT  top-stick_qualisys.STL  ~$top-stick_qualisys.SLDPRT
CAD/Arena2022/: Flexledd.SLDPRT  GearedMotor.SLDPRT  RotTannhjulV2.SLDPRT  RotTannhjulV2.STL  Sideplate.SLDPRT  SideplateLiten.SLDPRT  Top-ring.SLDPRT  ToppHjornev2.SLDPRT  ToppPropp.SLDPRT  myewcetch.SLDPRT  platform.SLDPRT  platform.STL  top-stick.SLDPRT
CAD/Arena2022-2024/: 2024ArenaFrustumDisplay.SLDASM  2024FrontpageDisplay.SLDASM  2024Rod.SLDPRT  Actuator-platform.SLDASM  ArenaV3.STL  ArenaV4_2024.SLDASM  FrontpageDisplay.SLDASM  Frustum.SLDPRT  GearedMotor.SLDPRT  HjorneV2L.SLDPRT  HjorneV2R.SLDPRT  LeadNut.SLDPRT  Mid-section.SLDASM  MidSuport.SLDPRT  MovingStick.SLDPRT  Rod.SLDPRT  RotTannhjul.SLDPRT  SideplateLiten.SLDPRT  SlideV1.SLDPRT  ToppHjornev2.SLDPRT  ToppHjornev3.SLDPRT  foring.SLDPRT  platform.SLDPRT  top-stick.SLDPRT
CAD/Arena2022_FromRPI/: Aktuator.SLDPRT  ArenaV1.SLDASM  HjorneV2L.STL  HjorneV2R.STL  LeadNut.SLDPRT  Mid-section.SLDASM  MovingStick.STL  README.md  RackBox.SLDPRT  Rod.SLDPRT  RotTannhjul.STL  SlideV1.STL  ToppHjorne.SLDPRT  foring.SLDPRT  top-stick.STL
CAD/Arena2024improvements/: Actuator-platformV2.SLDASM  Mid-sectionV2.SLDASM  MidSuportV3.SLDPRT  MovingStickV2_Endstop.SLDPRT  arena-1.SLDDRW  arena-2.SLDDRW  arena-3.SLDDRW  buttonblock.SLDPRT  cardholder2.SLDPRT  encoderHolderTest.STL  endstopHolder.SLDPRT  magnetHolder2mm.SLDPRT  platformV2.SLDPRT
CAD/ArenaCAD_2022_fra_git/: Actuator-platform.SLDASM  Actuator-platform.STL  ArenaFrustumDisplay.SLDASM  Beskyttelsesvegger.SLDPRT  Bunnplate.SLDPRT  Bunnring.SLDPRT  Flexledd.SLDPRT  Frustum.SLDPRT  GearedMotor.SLDPRT  HjorneV2.SLDPRT  HjorneV2.STL  HjorneV2L.SLDPRT  HjorneV2R.SLDPRT  LeadNut.SLDPRT  Mid-section.SLDASM  MidSuport.SLDPRT  MidSuport.STL  MovingStickV2.SLDPRT  RackBox.SLDPRT  Rod.SLDPRT  Rod2024.SLDPRT  RotTannhjul.SLDPRT  RotTannhjulV3.STL  Sideplate.SLDPRT  SideplateLiten.SLDPRT  SlideV1.SLDPRT  Top-ring.SLDPRT  ToppHjornev3.SLDPRT  ToppPlate.SLDPRT  bearing.SLDPRT  foring.SLDPRT  linear-bearing.SLDPRT  platform.SLDPRT  step.SLDPRT  top-stick.SLDPRT
CAD/CAD/: Actuator-platform.SLDASM  ArenaV2.SLDASM  Bunnplate.SLDPRT  Bunnring.STL  Hjorne.SLDPRT  Hjorne.STL  HjorneV2.SLDPRT  MidSuport.SLDPRT  MovingStickV2.STL  RotTannhjulV3.SLDPRT  SlideV1.SLDPRT  Top-ring.STL  bearing.SLDPRT  linear-bearing.SLDPRT  step.SLDPRT
CAD/Old/: TopBodyDuct_V1.SLDPRT  old_drone-2.SLDDRW  skrogbunn - Copy - Copy.SLDPRT  skrogbunn - Copy.SLDPRT
CAD/PoseValidationTest/: ActuatorBracket.SLDPRT  CalibrationPlate.DXF  QualisysMarkerCube.SLDPRT  poseTest-1.SLDDRW  poseTest-2.SLDDRW  poseTest-3.SLDDRW
CAD/Quadcopter2022/: AssemblyPropTest.SLDASM  AssemblyPropTestGard.SLDASM  AssemblyPropTestGard_project_folders.html  Kretskort.step  PerformanceLog.txt  fall.SLDASM  heleGreiaPart.SLDPRT  kunProp.SLDASM  kunProp_project_folders.html  mk3Emax_USAmk2.SLDPRT  mk3Gemfan 3025mk2 CW.SLDPRT  mk3Gemfan 3025mk2.SLDPRT  mk3LIPOmk2.SLDPRT  mk3MotorPropAssemmk2.SLDASM  mk3SKROGLOKKmk2.SLDPRT  mk3SOLID-0.step.SLDPRT  mk3SOLID.step.SLDPRT  mk3bunnmatmk2.SLDPRT  mk3bunnmatspeilmk2.SLDPRT  mk3cm4asemblymk2.SLDASM  mk3cm4mk2.SLDPRT  mk3helegreiiamk2.SLDASM  mk3helegreiiamk2_project_folders.html  mk3innmat_asemblymk2.SLDASM  mk3ladermk2.SLDPRT  mk3mittplatemk2.SLDPRT  mk3propgarddmk2.SLDPRT  mk3rpi_cm4_drone_carrier_v01 PCB.step.SLDPRT  (+4 more)
Cheat Sheets/: containers.txt  git_commands.txt  ssh_commands.txt
Code/: cfdResultPlotting.m  frameSimulation.m  frameSimulationQuaternions.m  normalDist.m
Code/Arena/ros2_packages/rot_read/: CMakeLists.txt  package.xml
Code/Arena/ros2_packages/rot_read/src/: rot_read.h  send_rot.cpp
Code/Camera/Cpp/: CMakeLists.txt  poseMarkerDepth.cpp
Code/Communication/cpp/arenaServer/: .CMakeLists.txt.testBackup  CMakeCache.txt  CMakeLists.txt  Makefile  arenaServer  cmake_install.cmake
Code/Communication/cpp/arenaServer/bui/: CMakeCache.txt  Makefile  arenaServer  cmake_install.cmake  test
Code/Communication/cpp/arenaServer/src/: .arenaServer.cpp.swp  .droneClient.h.swp  .test.cpp.swp  arenaServer.cpp  arenaServer.h  droneClient.h  dronePosVec.pb.cc  dronePosVec.pb.h  messengerClass.cpp  msgThreads.cpp  programSpecifics.h  serverMain.cpp  test.cpp
Code/Communication/cpp/droneClient/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  droneClient
Code/Communication/cpp/droneClient/src/: .droneClient.cpp.swp  .droneClient.h.swp  droneClient.cpp  droneClient.h  dronePosVec.pb.h  mainClient.cpp  threadMembers.cpp
Code/Drone/IMUonly/: CMakeLists.txt  CMakeLists.txt.backup  numint.csv
Code/Drone/IMUonly/src/: clientImplementation.cpp  droneIMU.h  imuImplementation.cpp  imuMainTest.cpp
Figures/: 2024arenaDrone.pdn  FrameworkOverview.pdn  Signature Template.pdn  blockDiagrams.drawio  blockDiagrams2.drawio  blockDiagramsV2.drawio  cfd_GG.eps  cfd_SG.eps
Weekly Reports/: Forberedelse til 8.1.2024.docx  Oppstartsmøte.docx
(+397 files in other folders)
