cmake_minimum_required(VERSION 3.15)
project(Cpp)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
#find_library(librealsense /usr/local/include/librealsense2)
find_package(realsense2 REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${realsense_INCLUDE_DIR})
add_executable(opencvTest poseMarkerDepth.cpp)
target_link_libraries(opencvTest ${OpenCV_LIBS} ${realsense2_LIBRARY})